<resources>
    <string name="app_name">ToTheRescue</string>
    <string name="zadlawienie">Zadławienie</string>
    <string name="toniecie">Tonięcie</string>
    <string name="porazenie">Porażenie prądem</string>
    <string name="oparzenie">Oparzenie</string>
    <string name="rany">Rany</string>
    <string name="rko">RKO</string>
    <string name="przytomnosc">Utrata przytomności</string>
    <string name="zawal">Zawał</string>
    <string name="mode">mode</string>
    <string name="ZQ1">Dorosła osoba po zadławieniu straciła przytomność:</string>
    <string name="ZQ1A1">Wzywam pomoc i przechodzę do resuscytacji – 30 uciśnięć : 2 wdechy</string>
    <string name="ZQ1A2">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza</string>
    <string name="ZQ1A3">Wykonuję na przemian 2 wdechy ratownicze i 5 uciśnięć nadbrzusza</string>
    <string name="ZQ1A4">Wzywam pomoc i przechodzę do resuscytacji – 15 uciśnięć : 2 wdechy</string>
    <string name="ZQ1E">Przy zadławieniu osoby dorosłej, nasze postępowanie zależy od jej stanu.\nJeżeli osoba straciła przytomność, przechodzimy do resuscytacji krążeniowo-oddechowej (30 uciśnięć : 2 wdechy).</string>
    <string name="ZQ2">Jeżeli niemowlę zakrztusiło się, ale nie kaszle, bądź kaszel jest nieefektywny:</string>
    <string name="ZQ2A1">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć klatki piersiowe</string>
    <string name="ZQ2A2">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza</string>
    <string name="ZQ2A3">Wzywam pomoc i przechodzę do resuscytacji – 30 uciśnięć : 2 wdechy</string>
    <string name="ZQ2A4">Wzywam pomoc i przechodzę do resuscytacji – 15 uciśnięć : 2 wdechy</string>
    <string name="ZQ2E"> Przy zadławieniu dziecka, nasze postępowanie zależy od jego stanu.\nJeżeli nie kaszle, lub kaszel jest nieefektywny a dziecko jest przytomne, wykonujemy naprzemiennie: 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza u dzieci powyżej 1 roku życia. 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć klatki piersiowej u niemowląt.</string>
    <string name="ZQ3">Jeżeli dorosły zakrztusił się, ale nie kaszle, bądź kaszel jest nieefektywny:</string>
    <string name="ZQ3A1">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza</string>
    <string name="ZQ3A2">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć klatki piersiowej</string>
    <string name="ZQ3A3">Wzywam pomoc i przechodzę do resuscytacji – 30 uciśnięć : 2 wdechy</string>
    <string name="ZQ3A4">Wzywam pomoc i przechodzę do resuscytacji – 15 uciśnięć : 2 wdechy</string>
    <string name="ZQ3E">Przy zadławieniu osoby dorosłej, nasze postępowanie zależy od jej stanu.\nJeżeli nie kaszle, lub kaszel jest nieefektywny a osoba jest przytomna, wykonujemy naprzemiennie 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza.</string>
    <string name="ZQ4">Jeżeli niemowlę po zakrztuszeniu się, straciło przytomność (zwiotczało):</string>
    <string name="ZQ4A1">Po wykonaniu 5 wdechów ratowniczych, wzywam pomoc i przechodzę do resuscytacji – 30 uciśnięć : 2 wdechy</string>
    <string name="ZQ4A2">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć klatki piersiowej</string>
    <string name="ZQ4A3">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć nadbrzusza</string>
    <string name="ZQ4A4">Biegnę do szpitala po pomoc</string>
    <string name="ZQ4E"> Przy zadławieniu dziecka, nasze postępowanie zależy od jego stanu.\nJeżeli dziecko straciło przytomność, wykonujemy 5 wdechów ratowniczych i przechodzimy do resuscytacji krążeniowo-oddechowej (30 uciśnięć : 2 wdechy).</string>
    <string name="ZQ5">Jeżeli dorosły po zakrztuszeniu się, stracił przytomność:</string>
    <string name="ZQ5A1">Wzywam pomoc i przechodzę do resuscytacji – 30 uciśnięć : 2 wdechy</string>
    <string name="ZQ5A2">Naprzemiennie wykonuję 5 uciśnięć w okolicę międzyłopatkową i 5 uciśnięć klatki piersiowej</string>
    <string name="ZQ5A3">Wzywam pomoc i przechodzę do resuscytacji – 50 uciśnięć : 2 wdechy</string>
    <string name="ZQ5A4">Wzywam pomoc i przechodzę do resuscytacji – 15 uciśnięć : 2 wdechy</string>
    <string name="ZQ5E">Przy zadławieniu osoby dorosłej, nasze postępowanie zależy od jej stanu.\nJeżeli osoba straciła przytomność, przechodzimy do resuscytacji krążeniowo-oddechowej (30 uciśnięć : 2 wdechy).</string>
    <string name="ZQ6">Jeżeli niemowlę zakrztusiło się, ale nie kaszle, bądź kaszel jest nieefektywny. Po ułożeniu niemowlęcia na przedramieniu, podczas wykonywania uderzeń między łopatki:</string>
    <string name="ZQ6A1">Poddtrzymuję głowę niemowlęcia, tak by wykrztuszona rzecz wypadła na dłoń</string>
    <string name="ZQ6A2">Pozwalam głowie niemowlaka zwisać swobodnie</string>
    <string name="ZQ6A3">Odginam głowę niemowlaka maksymalnie do tyłu</string>
    <string name="ZQ6A4">Dzwonię po pomoc</string>
    <string name="ZQ6E">Po ułożeniu niemowlęcia na przedramieniu, podczas wykonywania uderzeń między łopatki poddtrzymujemy głowę niemowlęcia, tak by wykrztuszona rzecz wypadła na dłoń.</string>
    <string name="ZQ7">W przypadku osoby dorosłej próba usunięcia ciała obcego „na ślepo”:</string>
    <string name="ZQ7A1">Jest niewskazana – można doprowadzić do urazu. Ciała obce można usuwać tylko gdy się je widzi</string>
    <string name="ZQ7A2">Jest wskazana – należy ją wykonać póki poszkodowany jest przytomny</string>
    <string name="ZQ7A3">Jest wskazana – należy ją wykonać kiedy poszkodowany straci przytomność</string>
    <string name="ZQ7A4">Jest konieczna – należy ją wykonać jak najszybciej</string>
    <string name="ZQ7E">Próba usunięcia ciała obcego z dróg oddechowych “na ślepo” może spowodować pogłębienie urazu.\nMożna usunąć ciało obce, tylko jeżeli jest ono widoczne i mamy pewność, że uda nam się je wyciągnąć.</string>
    <string name="ZQ8">Jeśli dziecko po zadławieniu kaszle efektywnie:</string>
    <string name="ZQ8A1">Zachęcam je do kaszlu i nieustannie obserwuj</string>
    <string name="ZQ8A2">Wołam o pomoc i oceniam stan świadomości dziecka</string>
    <string name="ZQ8A3">Wykonuje 5 uderzeń w okolicę międzyłopatkową</string>
    <string name="ZQ8A4">Wykonuje 5 uciśnięć klatki piersiowe</string>
    <string name="ZQ8E">Przy zadławieniu dziecka, nasze postępowanie zależy od jego stanu.\nJeżeli kaszle, a jej kaszel jest efektywny - zachęcamy do dalszego kaszlu i monitorujemy jego stan, by móc zareagować na ewentualne pogorszenie.</string>
    <string name="TQ1">Osobie, która uległa podtopieniu, po wyjęciu z wody należy:</string>
    <string name="TQ1A1">Udrożnić drogi oddechowe i w przypadku braku oddechu prowadzić pośredni masaż serca i oddech zastępczy</string>
    <string name="TQ1A2">Natychmiast okryć ciało folią życia, chroniąc przed wychłodzeniem</string>
    <string name="TQ1A3">Wylać wodę z dróg oddechowych poprzez odpowiednie ułożenie</string>
    <string name="TQ1A4">Wszystkie powyższe odpowiedzi są prawdziwe</string>
    <string name="TQ1E">Przy podtopieniu należy jak najszybciej wydostać osobę spod wody.\nPrzy utracie przytomności, oddechu już w momencie wydobycia na powierzchnie zalecane jest podanie mu pierwszego sztucznego oddechu.\nPrzed rozpoczęciem resuscytacji nie należy stosować żadnych zabiegów w celu usunięcia wody z przewodu pokarmowego i dróg oddechowych.\nJest to zabieg powodujący stratę cennego czasu.</string>
    <string name="TQ2">Wskaż zdanie prawdziwe:</string>
    <string name="TQ2A1">Postępowanie z osobą podtopioną jest takie samo, niezależnie od rodzaju wody</string>
    <string name="TQ2A2">Woda słodka się nie wchłania i należy ja wylać z poszkodowanego</string>
    <string name="TQ2A3">Przy utonięciu w wodzie słodkiej rokowanie jest lepsze</string>
    <string name="TQ2A4">Woda słona uszkadza drogi oddechowe i należy ją najpierw wylać z układu oddechowego poszkodowanego</string>
    <string name="TQ2E">Rodzaj wody nie ma wpływu na rokowania i postępowanie z osobą podtopioną.</string>
    <string name="TQ3">W przypadku podtopienia prowadzenie oddechu zastępczego należy rozpocząć:</string>
    <string name="TQ3A1">Jak najwcześniej, w miarę możliwości jeszcze w wodzie</string>
    <string name="TQ3A2">Po wylaniu wody z dróg oddechowych</string>
    <string name="TQ3A3">Po zapewnieniu stabilizacji kręgosłupa szyjnego</string>
    <string name="TQ3A4">Po 5 min od wyjęcia z wody by mogła się ona wchłonąć z płuc</string>
    <string name="TQ3E">Przy podtopieniu należy jak najszybciej wydostać osobę spod wody.\nPrzy utracie przytomności, oddechu już w momencie wydobycia na powierzchnie zalecane jest podanie mu pierwszego sztucznego oddechu.\nPrzed rozpoczęciem resuscytacji nie należy stosować żadnych zabiegów w celu usunięcia wody z przewodu pokarmowego i dróg oddechowych.\nJest to zabieg powodujący stratę cennego czasu.</string>
    <string name="TQ4">Ratując osobę podtopioną należy pamiętać że:</string>
    <string name="TQ4A1">Uzyskanie powrotu czynności życiowych może wystąpić po kilkudziesięciu minutach resuscytacji</string>
    <string name="TQ4A2">Głowa nie powinna być odchylana z uwagi na możliwość zachłyśnięcia wypitą wodą</string>
    <string name="TQ4A3">Uciskanie kl. piersiowej i prowadzenie oddechu zastępczego jest mało efektywne z uwagi na wodę w płucach</string>
    <string name="TQ4A4">Śmierć mózgu następuje szybciej w zimnej wodzie</string>
    <string name="TQ4E">Uzyskanie powrotu czynności życiowych u osoby poddtopionej może wystąpić nawet po kilkudziesięciu minutach resuscytacji.\nResuscytację możemy przerwać tylko na polecenie ratowników z zespołu pogotowia lub gdy opadniemy z sił i nie ma w pobliżu nikogo, kto by nam pomógł.\nTylko lekarz może stwierdzić zgon.</string>
    <string name="TQ5">Kiedy widzisz, że pod kimś zarwał się lód:</string>
    <string name="TQ5A1">Jeżeli jest taka możliwość należy szybko go przebrać w pożyczone suche ubranie</string>
    <string name="TQ5A2">Nie ma już dla niego nadziei</string>
    <string name="TQ5A3">Po wyciągnięciu należy podać mu alkohol na rozgrzanie</string>
    <string name="TQ5A4">Jak najszybciej pobiegnij w kierunku ofiary, żeby ją wyciągnąć</string>
    <string name="TQ5E">Jeśli pod kimś zarwał się lód\n1. Nie biegnij w kierunku ofiary - lód w tym miejscu może być słaby i może zarwać się również pod tobą.\n2. Nie podawaj alkoholu- doprowadzi to do dalszego wyziębienia organizmu.\n3. Zadbaj o komfort termiczny: podaj coś ciepłego do picia, okryj kocem termicznym, przebierz w suche ubranie.</string>
    <string name="TQ6">Po wyniesieniu na brzeg lub przed rozpoczęciem resuscytacji u osoby podtopionej:</string>
    <string name="TQ6A1">Nie należy stosować żadnych zabiegów w celu usunięcia wody z przewodu pokarmowego i dróg oddechowych.</string>
    <string name="TQ6A2">Należy wylać całą wodę z dróg oddechowych</string>
    <string name="TQ6A3">Należy wylać całą wodą z przewodu pokarmowego</string>
    <string name="app_brief">Aplikacja ToTheRescue stworzona została dla wszystkich którzy chcą sprawdzić lub pogłębić swoją wiedze na temat zasad udzielania pierwszej pomocy w różnych przypadkach.</string>
    <string name="help_name">Pomoc</string>
    <string name="quiz_name">Quiz</string>
    <string name="app_case_text">Aplikacja działa w dwóch trybach:</string>
    <string name="help_brief">Udziel pomocy zgodnie z procedurami - przewodnik postępowania krok po kroku.</string>
    <string name="quiz_brief">Sprawdż swoją wiedzą na temat udzielania pierwszej pomocy.</string>
    <string name="question_text">question</string>
    <string name="answer1_text">answer1</string>
    <string name="answer2_text">answer2</string>
    <string name="next_text">Dalej</string>
    <string name="step_brief_text">step_brief</string>
    <string name="step_info_text">step_info</string>
</resources>