<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rescue.totherescue.quiz.AppInfoActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/lightblue">

    <ImageView
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/icon"
        android:id="@+id/imageView2"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" ToThe\nRescue"
        android:textStyle="bold|italic"
        android:textSize="34sp"
        android:textColor="@color/strongblue"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="28dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_brief"
        android:textStyle="bold|italic"
        android:textSize="14sp"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:id="@+id/textView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:showDividers="middle"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:text="@string/app_case_text"
            android:textStyle="italic|bold"
            android:textColor="@color/strongblue" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_name"
            android:id="@+id/button_help"
            android:textSize="18sp"
            android:background="@color/strongblue"
            android:textColor="@color/lightblue"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/help_brief"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:textColor="@color/strongblue"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz_name"
            android:id="@+id/button_quiz"
            android:textSize="18sp"
            android:background="@color/strongblue"
            android:textColor="@color/lightblue"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/quiz_brief"
            android:gravity="center"
            android:textStyle="italic|bold"
            android:textColor="@color/strongblue"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</RelativeLayout>
