<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rescue.totherescue.MainActivity"
    android:background="@color/lightblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text"
        android:id="@+id/textView_question"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textColor="@color/strongblue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1_text"
        android:id="@+id/button_answer1"
        android:textSize="30dp"
        android:background="@color/strongblue"
        android:textColor="@color/lightblue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer2_text"
        android:id="@+id/button_answer2"
        android:textSize="30dp"
        android:background="@color/strongblue"
        android:textColor="@color/lightblue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"/>

</RelativeLayout>
