<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="36dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rescue.totherescue.MainActivity"
    android:background="@color/lightblue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_brief_text"
        android:id="@+id/textView_step_brief"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:textColor="@color/strongblue"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_info_text"
        android:id="@+id/textView_step_info"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/strongblue"
        android:gravity="center"
        android:layout_below="@+id/textView_step_brief"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:layout_above="@+id/button_next"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_text"
        android:id="@+id/button_next"
        android:textSize="30dp"
        android:background="@color/strongblue"
        android:textColor="@color/lightblue"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:gravity="center"/>

</RelativeLayout>
